--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
         </div>
     </div>
     <div style="padding: 60px;background-color:#fff5f5;">
-    	<img src="img/notice.jpeg">
+    	<img src="img/banner.jpeg">
     </div>
     <div class="notification-wrapper">
         <div class="notification-bar">
